# eyeware-ros

./: LICENSE  README.md
gazesense_bridge/: CMakeLists.txt  README.md  package.xml  setup.py
gazesense_bridge/launch/: demo.launch  gazesense_bridge.launch  gazesense_ros_bridge.launch
gazesense_bridge/msg/: GazeObjects.msg  Person.msg  PersonArray.msg  ScreenTarget.msg  ScreenTargets.msg
gazesense_bridge/objects/: camera.stl
gazesense_bridge/rviz/: gazesense.rviz
gazesense_bridge/scripts/: gazesense_bridge_node.py  gazesense_listener.py  gazesense_tf_publisher_node.py  gazesense_visualizer_node.py  generate_camera_stl.py  transformations.py  utils.py
gazesense_bridge/src/: gazesense_ros_bridge.py
gazesense_bridge/srv/: ChangeUser.srv
gazesense_msgs/: CMakeLists.txt  package.xml
gazesense_msgs/msg/: BlinkInfo.msg  GazeInfo.msg  HeadPoseInfo.msg  Ray3D.msg  ScreenGazeInfo.msg  TrackedPersonInfo.msg  TrackedUser.msg  TrackedUserArray.msg  TrackingConfidence.msg
