<?xml version="1.0"?>
<package format="2">
  <name>gazesense_bridge</name>
  <version>2.1.0</version>
  <description>ROS gazesense_bridge package</description>

  <author email="olivier.canevet@idiap.ch">Olivier Canévet</author>
  <maintainer email="giovanni@eyeware.tech">Giovanni Saponaro</maintainer>
  <maintainer email="contact@eyeware.tech">Eyeware Tech SA</maintainer>

  <license>BSD-3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>gazesense_msgs</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

</package>
