<?xml version="1.0"?>
<package format="2">
  <name>gazesense_msgs</name>
  <version>2.1.0</version>
  <description>ROS gazesense_msgs package</description>

  <author email="olivier.canevet@idiap.ch">Olivier Canévet</author>
  <maintainer email="giovanni@eyeware.tech">Giovanni Saponaro</maintainer>
  <maintainer email="contact@eyeware.tech">Eyeware Tech SA</maintainer>

  <license>BSD-3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

</package>
